--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -2,11 +2,11 @@
 docker_edition: docker-ce
 docker_apt_gpg_key: https://download.docker.com/linux/ubuntu/gpg
 docker_deb_repository: "deb https://download.docker.com/linux/ubuntu bionic stable"
-docker_system_packages:
+docker_dependencies:
   - apt-transport-https
   - ca-certificates
-  - curl
-  - software-properties-common
+docker_install_sdk_for_python: true
+docker_sdk_for_python_dependencies:
   - python-pip
   - python3-pip
   - virtualenv
