--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,4 +1,11 @@
 ---
+- name: Ensure old versions of Docker are not installed
+  package:
+    name:
+      - docker
+      - docker-engine
+    state: absent
+
 - name: Install dependencies
   apt:
     name: "{{ item }}"
@@ -17,9 +24,10 @@
 
 - name: Install Docker
   apt:
-    name: "{{ docker_edition }}"
+    name: "{{ item }}"
     state: latest
     update_cache: yes
+  loop: "{{ docker_edition }}"
   notify:
     - enable docker
     - restart docker
